[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/characters/player/gun/Gun.gd" type="Script" id=1]
[ext_resource path="res://src/characters/player/gun/CodeText.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/player_shoot.ogg" type="AudioStream" id=3]

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CodeText" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 1.12
bus = "SFX"

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
